*samri-0.4.2 (10 Jan 2020)

  10 Jan 2020;  <chymera@gentoo.org> +samri-0.4.2.ebuild:
  sci-biology/samri: version bump 0.4.2 ahead of Gentoo Science

  08 Dec 2019;  <chymera@gentoo.org> -Manifest, -samri-0.4.1.ebuild:
  sci-biology/samri: migrated version to Gentoo Science  https://gitweb.gentoo.o
  rg/proj/sci.git/commit/?id=e68c1eb1aea94ee2860d3b9feb079932114904ea

*samri-0.4.1 (08 Dec 2019)

  08 Dec 2019;  <chymera@gentoo.org> +samri-0.4.1.ebuild, -samri-0.4.ebuild:
  sci-biology/samri: version bump 0.4.1 ahead of Gentoo Science

*samri-9999 (12 Nov 2019)

  12 Nov 2019;  <chymera@gentoo.org> +samri-9999.ebuild:
  sci-biology/samri: live package with test suite

  12 Nov 2019;  <chymera@gentoo.org> metadata.xml, samri-0.4.ebuild:
  sci-biology/samri: